Update the landing page
Add links to /add and /download/odict.zip
Add "subscribe to our newsletter"

--- a/odict.ru/EmailTemplate.htm
+++ b/odict.ru/EmailTemplate.htm
@@ -4,11 +4,11 @@
     <title></title>
 </head>
 <body>
-    <p>Спасибо за ваш голос!</p>
+    <p> Спасибо за подписку на новости «Грамматического словаря».</p>
 
     <p> Каким вы видите будущее открытого грамматического словаря?
         Какие данные вам необходимы в первую очередь?  Общая лексика, имена людей, топонимы? 
-        Ударения, синонимы, эмоциональная окраска?
+        Ударения, синонимы, эмоциональная окраска? Учет многословных единиц?
     </p>
 
     <p> Напишите нам и мы обязательно учтем ваши пожелания при развитии проекта.</p>
